# jenkins-qviewer

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
src/: CMakeLists.txt  Main.qml  MainForm.qml  MainForm.ui.qml  connection.cpp  connection.h  joblistresponseparser.cpp  joblistresponseparser.h  main.cpp  qml.qrc  qtutils.h
tests/: CMakeLists.txt  tst_joblistresponseparser.cpp
